fixtures/invalid/mixin-declaration.scl
@myMixin($v1,v2)
    someLiteral = $v1

